homework_5/order.css
body{
    margin: 0;
    padding: 0;
}
.main{
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100vw;
}
/* setting up the 3 dividers */
.images-column, .info-column, .product-column{
    position: relative;
    width: 33.33%;
    padding: 8px;
    height: 500px;
}

/* first column images of bun */
.main-original{
    width: 100%;
    height: 480px;
    display: block;
    object-fit: cover;
}

.original-small{
    width: 90px;
    height: 90px;
}

.small-images{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 16px;
}

/* second column information about bun */
.name{
    color: #954901;
    font-size: 64px;
    margin-top: 0;
}

.bun-info{
    color: #b06b29;
    font-size: 36px;
}

.ingredients{
    color:#b06b29;
    font-size: 36px;
}

.ingredients-list{
    color:#b06b29;
    font-size: 24px;
}

/* third column for product details and ordering */
.title{
    color: #954901;
    font-size: 36px;
    margin-top: 0;
}

.title-quantity{
    color: #954901;
    font-size: 36px;
    margin-top: 8px;
}

.title-glazing{
    color: #954901;
    font-size: 36px;
}

.price{
    color: #b06b29;
    font-size: 36px;
}

/* quantity boxes */
.button-1roll{
    font-size: 24px;
    border: 2px solid #b06b29;
    background: #b06b29;
    margin-left: 0px;
    color: white;
    text-decoration: none;
    padding: 16px;
    position: relative;
    display: inline-block;
}

.button-rolls{
    font-size: 24px;
    border: 2px solid #b06b29;
    margin-left: 0px;
    color: #b06b29;
    text-decoration: none;
    padding: 16px;
    position: relative;
    display: inline-block;
}

.glazing-none{
    font-size: 24px;
    border: 2px solid #b06b29;
    background: #b06b29;
    margin-left: 0px;
    color: white;
    text-decoration: none;
    padding: 16px;
    margin: 5px;
}

.glazings{
    font-size: 24px;
    border: 2px solid #b06b29;
    margin-left: 0px;
    color: #b06b29;
    text-decoration: none;
    padding: 16px;
    position: relative;
    display: inline-block;
    margin: 5px;
}

.add-to-cart{
    font-size: 36px;
    border: 2px solid #b06b29;
    background: #b06b29;
    margin-left: 0px;
    color: white;
    text-decoration: none;
    padding: 16px;
    margin-top: 16px;
    text-align: center;
}

.buy-now{
    font-size: 36px;
    border: 2px solid #954901;
    background: #954901;
    margin-left: 0px;
    color: white;
    text-decoration: none;
    padding: 16px;
    margin-top: 16px;
    text-align: center;
}

